<resources>
    <string name="app_name">MyWeather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scroll_view">scrollView</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_test_navigation">TestNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pressure" translatable="false">Pressure</string>
    <string name="zone" translatable="false">Zone</string>
    <string name="visibility" translatable="false">Visibility</string>
    <string name="uv" translatable="false">Ultra Violet</string>
    <string name="clouds" translatable="false">Clouds</string>
    <string name="wind" translatable="false">Wind</string>
    <string name="humidity" translatable="false">Humidity</string>
    <string name="initial_setup" translatable="false">Initial Setup</string>
    <string name="home" translatable="false">Home</string>
    <string name="map" translatable="false">Google Map</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="favourites" translatable="false">Favourites</string>
    <string name="alerts" translatable="false">Alerts</string>
    <string name="loaction">Location</string>
    <string name="language">Language</string>
    <string name="temprature">Temprature</string>
    <string name="gps">GPS</string>
    <string name="maps">Map</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="meter_sec">meter/sec</string>
    <string name="miles_hour">" miles/hour"</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="xxx" />
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="notifications">Notifications</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="dismiss">Dismiss</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
</resources>