<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    tools:context=".alerts.view.AlertDialogFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="15dp"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/from_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/from_tv"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/from"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/from_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/from_cardView"
                app:layout_constraintStart_toStartOf="@id/from_cardView"
                app:layout_constraintTop_toBottomOf="@id/from_cardView">

                <androidx.cardview.widget.CardView
                    android:id="@+id/from_date_cardView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp">

                    <TextView
                        android:id="@+id/from_date_textview"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@color/grey"
                        android:gravity="center"
                        android:hint="@string/start_date"
                        android:paddingStart="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white_used"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/from_time_cardView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp">

                    <TextView
                        android:id="@+id/from_time_textview"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@color/grey"
                        android:gravity="center"
                        android:hint="@string/start_time"
                        android:paddingStart="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white_used"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/to_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintStart_toEndOf="@id/from_cardView"
                app:layout_constraintTop_toTopOf="parent">

                ///////////////////////////////////////////////////////

                <TextView
                    android:id="@+id/to_textview"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/to_cardView"
                app:layout_constraintStart_toStartOf="@id/to_cardView"
                app:layout_constraintTop_toBottomOf="@id/to_cardView">

                <androidx.cardview.widget.CardView
                    android:id="@+id/to_date_cardView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp">

                    <TextView
                        android:id="@+id/to_date_tv"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@color/grey"
                        android:gravity="center"
                        android:hint="@string/end_date"
                        android:paddingStart="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white_used"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/to_time_cardView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="30dp">

                    <TextView
                        android:id="@+id/to_time_textview"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:background="@color/grey"
                        android:gravity="center"
                        android:hint="@string/end_time"
                        android:paddingStart="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white_used"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <RadioGroup
                android:id="@+id/alert_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:buttonTint="@color/black"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/from_linearLayout">

                <RadioButton
                    android:id="@+id/alert_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:text="@string/alerts"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/notification_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:buttonTint="@color/black"
                    android:text="@string/notifications"
                    android:textSize="16sp" />
            </RadioGroup>


            <TextView
                android:id="@+id/okTv"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/baseline_radio_button_checked_24"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/cancelTv"
                app:layout_constraintTop_toTopOf="@id/cancelTv" />

            <TextView
                android:id="@+id/cancelTv"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginEnd="65dp"
                android:background="@drawable/baseline_radio_button_checked_24"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alert_radio_group" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>